<resources>
    <string name="app_name">ConfTech</string>
    <string name="welcome">Welcome !</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_password_again">Enter your password again</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_your_first_name">enter your first name</string>
    <string name="select_your_role">Select your role</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>