<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="start"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/login_poster"
        android:scaleType="fitXY"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome"
            android:textSize="@dimen/_25sdp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_width="@dimen/_275sdp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            android:hint="@string/enter_your_email"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_width="@dimen/_275sdp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            android:hint="@string/enter_your_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSignin"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/sign_in"
            android:textSize="@dimen/_18sdp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/orange"/>

    </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>