<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="start"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="Sign Up"
            android:textSize="@dimen/_25sdp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/orange"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="First Name"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_width="@dimen/_275sdp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            android:hint="@string/enter_your_first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFname"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>

        </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="@dimen/_275sdp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                android:hint="@string/enter_your_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLname"
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>

            </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_width="@dimen/_275sdp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            android:hint="@string/enter_your_email"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>

        </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_role"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/spnRole"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/spinner_border"
                />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_width="@dimen/_275sdp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            android:hint="@string/enter_your_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_gravity="center"
            android:layout_width="@dimen/_275sdp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            android:hint="@string/enter_your_password_again"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCpassword"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_40sdp"
            android:text="Sign Up"
            android:textSize="@dimen/_18sdp"
            android:layout_gravity="center"
            android:background="@drawable/button_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="By signing up, you are agreeing to our Terms of Service and Privacy Policy."
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"/>

        </LinearLayout>

        </ScrollView>

    </LinearLayout>





</LinearLayout>