<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_10sdp"
    android:paddingHorizontal="@dimen/_20sdp"
    tools:context=".fragments.AttendeeProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Profile"
        android:textSize="@dimen/_25sdp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_100sdp"
        android:layout_gravity="center"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        app:civ_border_color="@color/black"
        app:civ_border_width="@dimen/_1sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="First Name"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="@dimen/_275sdp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                android:hint="@string/enter_your_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFname"
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Last Name"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="@dimen/_275sdp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                android:hint="@string/enter_your_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLname"
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="center"
                android:layout_width="@dimen/_275sdp"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="@dimen/_10sdp"
                app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                android:hint="@string/enter_your_email"
                android:enabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:enabled="false"
                    style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Role"
                android:layout_marginTop="@dimen/_15sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black"/>

            <Spinner
                android:id="@+id/spnRole"
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/spinner_border"
                android:saveEnabled="false"
                />

            <Button
                android:id="@+id/btnUpdate"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="Update"
                android:textSize="@dimen/_18sdp"
                android:layout_gravity="center"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/btnLogout"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="@dimen/_230sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="Logout"
                android:drawableLeft="@drawable/baseline_logout_24"
                android:textSize="@dimen/_18sdp"
                android:layout_gravity="center"
                android:background="@drawable/button_background"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>